Reformated date and edited some small layout issues

--- a/app/assets/stylesheets/components/_card-backyard.scss
+++ b/app/assets/stylesheets/components/_card-backyard.scss
@@ -1,13 +1,20 @@
 .card-backyard {
+  position: relative;
   overflow: hidden;
   background: $pale-green;
   height: 340px;
-   box-shadow: 0 0 15px $pale-green-shaddow;
-   border-radius: 15px;
-   color: $brown;
+  box-shadow: 0 0 15px $pale-green-shaddow;
+  border-radius: 15px;
+  color: $brown;
+  transition: transform 0.4s;
 }
 
-.card-backyard > img {
+.card-backyard:hover {
+  transform: scale(1.03);
+  opacity: 0.8;
+}
+
+.card-backyard>img {
   height: 200px;
   width: 100%;
   object-fit: cover;
@@ -18,7 +25,7 @@
   font-size: 16px;
   font-weight: bold;
   margin: 0;
-  
+
 }
 
 .card-backyard p {
@@ -32,7 +39,6 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  position: relative;
   text-decoration: none;
 }
 
@@ -40,7 +46,7 @@
   width: 100%;
   padding: 25px;
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   font-size: 20px;
   // margin: 8px;
   // display: flex;
@@ -51,48 +57,57 @@
   top: 100px;
   // bottom: 0;
   // left: 0;  
-  }
+}
 
-  .garden-description {
-    margin-top:30px;
-  }
+.garden-description {
+  margin-top: 30px;
+}
 
 
 
-  .card-backyard p {
-    font-size: 12px;
-    line-height: 1.4;
-    opacity: .7;
-    margin-bottom: 0;
-    margin-top: 8px;
-  }
-  // .card-backyard .description {
-  //   padding: 16px;
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: flex-end;
-  //   position: relative;
- 
-  .column {
-    height: 100%;
-    width: 120px;
-    object-fit: cover;
-    // position: relative;
+.card-backyard p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
 
-  }
-  .col-sm-6 {
-    margin-top: 45px;
-    padding: 20px;
-    padding-top: 25px;
+// .card-backyard .description {
+//   padding: 16px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: flex-end;
+//   position: relative;
 
-  }
+.column {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+  // position: relative;
 
-  .show-image {
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
-  }
+}
 
-  .align-bottom {
-    text-align: left;
+.col-sm-6 {
+  margin-top: 45px;
+  padding: 20px;
+  padding-top: 25px;
 
-  }
+}
+
+.show-image {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+
+.align-bottom {
+  text-align: left;
+}
+
+.card-backyard-icons {
+  position: absolute;
+  display: flex;
+  bottom: 5px;
+  right: 5px;
+  font-size: 1.2rem;
+}
